--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,4 +2,4 @@ main:
   - title : 팀 소개
     url: https://gitpitch.com/Hdong27/newB
   - title: about us
-    url: https://hdong27.github.io/newB/
+    url: https://gitpitch.com/Hdong27/newB
